# pwf

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONVERSION_TOOL_PLAN.md  Cargo.toml  FIT_EXPORT_ANALYSIS.md  FIT_FORMAT_GAP_ANALYSIS.md  GPX_EXPORT_IMPLEMENTATION.md  LICENSE  MULTI_WEEK_PERIODIZATION_SUMMARY.md  PERIODIZATION_IMPLEMENTATION.md  README.md  SPORT_TYPES_IMPLEMENTATION.md  lcov.info
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy-web.yaml  pwf-core-release.yaml  release.yaml
crates/pwf-cli/: Cargo.toml
crates/pwf-cli/src/: main.rs
crates/pwf-cli/tests/: convert_command.rs  history_and_init.rs  validate_command.rs
crates/pwf-converters/: Cargo.toml  README.md
crates/pwf-converters/src/: error.rs  lib.rs
crates/pwf-converters/src/common/: mod.rs  utils.rs
crates/pwf-converters/src/csv/: exporter.rs  mod.rs
crates/pwf-converters/src/fit/: mappings.rs  mod.rs  parser.rs  types.rs
crates/pwf-converters/src/gpx/: exporter.rs  mappings.rs  mod.rs  parser.rs
crates/pwf-converters/src/tcx/: exporter.rs  mappings.rs  mod.rs  parser.rs
crates/pwf-converters/tests/: csv_export_tests.rs  fit_conversion_tests.rs  gpx_export_tests.rs  gpx_mappings_tests.rs  tcx_conversion_tests.rs  version_validation_tests.rs
crates/pwf-converters/tests/test_helpers/: mod.rs
crates/pwf-core/: Cargo.toml
crates/pwf-core/src/: error.rs  lib.rs  types.rs
crates/pwf-core/src/history/: error_codes.rs  mod.rs  parser.rs  types.rs  validator.rs
crates/pwf-core/src/plan/: mod.rs  parser.rs  resolver.rs  types.rs  validator.rs
crates/pwf-core/tests/: exercise_library_tests.rs  history_v2_1_tests.rs  integration_tests.rs  progression_rules_tests.rs
crates/pwf-wasm/: Cargo.toml
crates/pwf-wasm/src/: conversion.rs  lib.rs  utils.rs  validation.rs
crates/pwf-wasm/tests/: conversion_tests.rs  utils_tests.rs  validation_tests.rs
crates/wps-cli/: Cargo.toml
crates/wps-cli/src/: main.rs
crates/wps-core/: Cargo.toml
crates/wps-core/src/: error.rs  lib.rs  types.rs
crates/wps-core/src/history/: mod.rs  parser.rs  types.rs  validator.rs
crates/wps-core/src/plan/: mod.rs  parser.rs  validator.rs
docs/: OWNLIFT-INTEGRATION.md  SPECIFICATION.md  equipment.md  exercise-library.md  modalities.md  progression-strategies.md
docs/blocks/: cycle.md  day.md  exercise.md  glossary.md  history.md  meta.md  plan.md  workout.md
examples/: beginner-strength.yaml  circuit-example.yaml  cycling-ftp-test.yaml  history-crossfit.yaml  history-cycling-power-v2.1.yaml  history-cycling-telemetry.yaml  history-export.yaml  history-functional-fitness.yaml  history-hiking.yaml  history-minimal.yaml  history-rowing.yaml  history-running-telemetry.yaml  history-strength-training.yaml  history-swimming-v2.1.yaml  history-triathlon-v2.1.yaml  history-yoga.yaml  minimal.yaml  mixed-modalities.yaml  periodization-undulating.yaml  progression-linear.yaml  superset-example.yaml  swimming-technique.yaml  workout-templates-basic.yaml
examples/invalid/: empty-days.yaml  invalid-glossary-empty.yaml  invalid-glossary-term.yaml  invalid-history-pr-no-unit.yaml  invalid-history-preferred-units-mismatch.yaml  invalid-history-rir-high.yaml  invalid-history-rpe-out-of-range.yaml  invalid-history-rpe-rir-both.yaml  invalid-modality.yaml  invalid-timestamp-format.yaml  invalid-timestamp-order.yaml  missing-version.yaml
schema/: pwf-history-v1.json  pwf-history-v2.json  pwf-v1.json  pwf-v2.json  wps-history-v1.json  wps-v1.json
web/: README.md  fix-wasm-jsdoc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/coverage/: coverage-final.json  index.html
web/coverage/src/: App.svelte.html  index.html  main.ts.html
web/coverage/src/components/builder/: BuilderPanel.svelte.html  BuilderWizard.svelte.html  index.html
web/coverage/src/components/converter/: ConversionResults.svelte.html  ConverterPanel.svelte.html  FormatSelector.svelte.html  index.html
web/coverage/src/components/shared/: ExampleGallery.svelte.html  index.html
web/coverage/src/components/validator/: FileUpload.svelte.html  ValidationResults.svelte.html  ValidatorPanel.svelte.html  YamlEditor.svelte.html  index.html
web/coverage/src/components/visualizer/: GpsMap.svelte.html  PlanTreeView.svelte.html  TelemetryCharts.svelte.html  VisualizerPanel.svelte.html  index.html
web/coverage/src/lib/: builderState.ts.html  builderStore.ts.html  index.html  modalityTypes.ts.html  stores.ts.html  wasm.ts.html
web/coverage/src/wasm/: index.html  pwf_wasm.d.ts.html  pwf_wasm_bg.wasm.d.ts.html
web/public/: manifest.json  service-worker.js
web/public/examples/: beginner-strength.yaml  complete-v1.1-features.yaml  exercise-library-v2.yaml  history-export.yaml  history-minimal.yaml  history-swimming-telemetry.yaml  library-reference-minimal.yaml  percentage-loading.yaml  periodization-block.yaml  periodization-linear.yaml  progression-double.yaml  rowing-pyramid.yaml  running-intervals.yaml  workout-templates-advanced.yaml
web/src/: App.svelte  main.ts  test-setup.ts
web/src/__mocks__/: pwf_wasm.ts
web/src/__tests__/: App.test.ts  main.test.ts
web/src/assets/: styles.css
web/src/components/builder/: BuilderPanel.svelte  BuilderWizard.svelte
web/src/components/builder/__tests__/: BuilderPanel.test.ts  BuilderWizard.test.ts  DayForm.test.ts  DaysStep.test.ts  ExerciseForm.test.ts  (+11 more)
web/src/components/converter/: ConversionResults.svelte  ConverterPanel.svelte  FormatSelector.svelte
web/src/components/shared/: ExampleGallery.svelte
web/src/components/validator/: FileUpload.svelte  ValidationResults.svelte  ValidatorPanel.svelte  YamlEditor.svelte
web/src/components/visualizer/: GpsMap.svelte  PlanTreeView.svelte  TelemetryCharts.svelte  VisualizerPanel.svelte
web/src/lib/: builderState.ts  builderStore.ts  customTemplates.ts  modalityTypes.ts  shareUtils.ts  stores.ts  wasm.ts  workoutTemplates.ts
web/src/lib/__tests__/: customTemplates.test.ts  modalityTypes.test.ts  shareUtils.test.ts  stores.test.ts  wasm.test.ts
(+47 files in other folders)
