[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bcarlson/pwf"
homepage = "https://pwf.dev"
description = "Portable Workout Format - validator and library"
keywords = ["fitness", "workout", "yaml", "validator", "cli"]
categories = ["command-line-utilities", "parser-implementations"]
authors = ["PWF Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
fitparser = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
