[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/pwf-wasm/pkg"]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bcarlson/pwf"
homepage = "https://pwf.dev"
description = "Portable Workout Format - validator and library"
keywords = ["fitness", "workout", "yaml", "validator", "cli"]
categories = ["command-line-utilities", "parser-implementations"]
authors = ["PWF Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
url = "2.5"
fitparser = "0.5"
tcx = "0.9"
gpx = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
