[package]
name = "pwf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI validator for Portable Workout Format (PWF) plans and history exports"

[[bin]]
name = "pwf"
path = "src/main.rs"

[dependencies]
pwf-core = { path = "../pwf-core" }
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
