[package]
name = "pwf-converters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Format converters for PWF (Portable Workout Format)"
keywords = ["fitness", "workout", "fit", "tcx", "converter"]
categories = ["parser-implementations"]
authors.workspace = true

[dependencies]
pwf-core = { path = "../pwf-core" }
fitparser = { workspace = true }
tcx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde-xml-rs = "0.5"

[dev-dependencies]
tempfile = "3.8"
