[package]
name = "pwf-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for PWF (Portable Workout Format)"
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pwf-core = { path = "../pwf-core" }
pwf-converters = { path = "../pwf-converters" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols
